fixes bullet spacing in skills section

--- a/css/main.css
+++ b/css/main.css
@@ -277,8 +277,8 @@ section h3 i {
 
 #skills .job-highlights li {
     break-inside: avoid;
-    padding-left: 0.9rem;
-    margin-bottom: 0.2rem;
+    padding-left: 1.2rem;
+    margin-bottom: 0.3rem;
 }
 
 /* Work Experience */
